# rustic-builder

./: Cargo.toml  Dockerfile  README.md
src/: builder_impl.rs  lib.rs  main.rs  payload_creator.rs
