[package]
name = "rustic-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5"
builder-server = {git = "https://github.com/eserilev/ethereum_apis", rev = "8b2dcdce3adc1024e4c0ef903dee5c5a1dfb4d49"}
ethereum-apis-common= {git = "https://github.com/eserilev/ethereum_apis", rev = "8b2dcdce3adc1024e4c0ef903dee5c5a1dfb4d49"}
async-trait = "0.1.51"
tokio = { version = "1", default-features = false, features = ["signal", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = {version = "0.3.8", features = ["env-filter"]}
tracing-error = "0.2.0"
tracing-core = "0.1.21"
async-channel = "1.9.0"
futures-channel = "0.3.21"
axum = { version = "0.8.1" }
slog = "2.7.0"
tracing-slog = "0.3.0"
hex = "0.4.3"
types = { git = "https://github.com/sigp/lighthouse", rev = "1e84f6bd93fd626f3252c6e9ff1ed41edb39737d" }
eth2 = { git = "https://github.com/sigp/lighthouse", rev = "1e84f6bd93fd626f3252c6e9ff1ed41edb39737d" }
execution_layer = { git = "https://github.com/sigp/lighthouse", rev = "1e84f6bd93fd626f3252c6e9ff1ed41edb39737d" }
task_executor = { git = "https://github.com/sigp/lighthouse", rev = "1e84f6bd93fd626f3252c6e9ff1ed41edb39737d" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", rev = "1e84f6bd93fd626f3252c6e9ff1ed41edb39737d" }
eth2_network_config = { git = "https://github.com/sigp/lighthouse", rev = "1e84f6bd93fd626f3252c6e9ff1ed41edb39737d" }
